--- a/tutors.html
+++ b/tutors.html
@@ -273,7 +273,7 @@
                 TutorConnect
             </a>
             <div class="nav-links" id="navLinks">
-                <a href="home.html" class="nav-link">HOME</a>
+                <a href="index.html" class="nav-link">HOME</a>
                 <a href="my-courses.html" class="nav-link">MY COURSES</a>
                 <a href="#" class="nav-link">ABOUT US</a>
                 <a href="#" class="nav-link">PRIVACY POLICY</a>
