--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                 <span>TutorConnect</span>
             </a>
             <div class="nav-links">
-                <a href="home.html" class="nav-link">HOME</a>
+                <a href="index.html" class="nav-link">HOME</a>
                 <a href="tutors.html" class="nav-link">FIND TUTORS</a>
                 <a href="registertutor.html" class="nav-link">BECOME A TUTOR</a>
             </div>
