--- a/index.html
+++ b/index.html
@@ -706,10 +706,10 @@
         <button class="close-menu">&times;</button>
         <a href="#" class="logo">
             <div class="logo-icon"></div>
-            <span>TutorConnect</span>
+            <span>Flexeducation</span>
         </a>
         <div class="nav-links">
-            <a href="home.html" class="nav-link">HOME</a>
+            <a href="index.html" class="nav-link">HOME</a>
             <a href="tutors.html" class="nav-link">FIND TUTORS</a>
             <a href="registertutor.html" class="nav-link">BECOME A TUTOR</a>
         </div>
@@ -790,7 +790,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 TutorConnect. All rights reserved. Transforming education through technology.</p>
+                <p>&copy; 2024 Flexeducation. All rights reserved. Transforming education through technology.</p>
             </div>
         </div>
     </footer>
