--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TutorConnect Platform</title>
+    <title>FLEX EDUCATION </title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
@@ -677,7 +677,7 @@
         <div class="nav-content">
             <a href="#" class="logo">
                 <div class="logo-icon"></div>
-                <span>TutorConnect</span>
+                <span>FLEX EDUCATION</span>
             </a>
             <div class="nav-links">
                 <a href="index.html" class="nav-link">HOME</a>
