--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
             <div class="nav-links">
                 <a href="home.html" class="nav-link">HOME</a>
                 <a href="tutors.html" class="nav-link">FIND TUTORS</a>
-                <a href="registertutor.html" class="nav-link">BECOME A TUTOR</a>
+                <a href="#" class="nav-link">BECOME A TUTOR</a>
             </div>
             <div class="search-bar">
                 <input type="text" class="search-input" placeholder="Search...">
