--- a/tutors.html
+++ b/tutors.html
@@ -202,8 +202,58 @@
             font-weight: 500;
         }
 
-        .mobile-menu-btn {
+        .menu-button {
             display: none;
+            background: none;
+            border: none;
+            color: white;
+            cursor: pointer;
+            padding: 5px;
+            font-size: 24px;
+        }
+
+        .mobile-menu {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(21, 24, 35, 0.95);
+            backdrop-filter: blur(10px);
+            z-index: 1001;
+            padding: 60px 20px 20px;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+            transition: transform 0.3s ease-in-out;
+            transform: translateX(-100%);
+        }
+
+        .mobile-menu.active {
+            display: flex;
+            transform: translateX(0);
+        }
+
+        .mobile-menu .nav-links {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+        }
+
+        .mobile-menu .nav-link {
+            font-size: 18px;
+            padding: 15px 0;
+            width: 100%;
+            text-align: center;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .close-menu {
+            position: absolute;
+            top: 20px;
+            right: 20px;
             background: none;
             border: none;
             color: white;
@@ -214,29 +264,15 @@
         @media (max-width: 768px) {
             .nav-links {
                 display: none;
-                position: absolute;
-                top: 100%;
-                left: 0;
-                right: 0;
-                background: rgba(21, 24, 35, 0.95);
-                backdrop-filter: blur(10px);
-                padding: 20px;
-                border-radius: 15px;
-                margin-top: 10px;
-                flex-direction: column;
-                gap: 15px;
             }
 
-            .nav-links.active {
-                display: flex;
-            }
-
-            .mobile-menu-btn {
-                display: block;
+            .menu-button {
+                display: block !important;
             }
 
             .search-bar {
-                max-width: none;
+                flex-grow: 1;
+                margin: 0 15px;
             }
 
             .tutors-grid {
@@ -247,6 +283,7 @@
                 font-size: 2rem;
             }
         }
+
         #loadingAnimation {
             position: fixed;
             top: 50%;
@@ -272,20 +309,28 @@
                 <i class="fas fa-graduation-cap"></i>
                 TutorConnect
             </a>
-            <div class="nav-links" id="navLinks">
-                <a href="index.html" class="nav-link">HOME</a>
-                <a href="my-courses.html" class="nav-link">MY COURSES</a>
-                <a href="#" class="nav-link">ABOUT US</a>
-                <a href="#" class="nav-link">PRIVACY POLICY</a>
-            </div>
             <div class="search-bar">
                 <input type="text" class="search-input" placeholder="Search tutors..." id="searchInput">
             </div>
-            <button class="mobile-menu-btn" id="mobileMenuBtn">
+            <div class="nav-links" id="navLinks">
+                <a href="home.html" class="nav-link">HOME</a>
+                <a href="tutors.html" class="nav-link">FIND TUTORS</a>
+                <a href="registertutor.html" class="nav-link">BECOME A TUTOR</a>
+            </div>
+            <button class="menu-button" id="mobileMenuBtn">
                 <i class="fas fa-bars"></i>
             </button>
         </div>
     </nav>
+
+    <div class="mobile-menu" id="mobileMenu">
+        <button class="close-menu" id="closeMenuBtn">&times;</button>
+        <div class="nav-links">
+            <a href="home.html" class="nav-link">HOME</a>
+            <a href="tutors.html" class="nav-link">FIND TUTORS</a>
+            <a href="registertutor.html" class="nav-link">BECOME A TUTOR</a>
+        </div>
+    </div>
 
     <div class="main-content">
         <h1 class="section-title">Our Expert Tutors</h1>
@@ -300,11 +345,33 @@
         const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
         // Mobile menu functionality
-        const mobileMenuBtn = document.getElementById('mobileMenuBtn');
-        const navLinks = document.getElementById('navLinks');
+        const menuButton = document.getElementById('mobileMenuBtn');
+        const closeMenuButton = document.getElementById('closeMenuBtn');
+        const mobileMenu = document.getElementById('mobileMenu');
 
-        mobileMenuBtn.addEventListener('click', () => {
-            navLinks.classList.toggle('active');
+        menuButton.addEventListener('click', () => {
+            mobileMenu.classList.add('active');
+            document.body.style.overflow = 'hidden';
+        });
+
+        closeMenuButton.addEventListener('click', () => {
+            mobileMenu.classList.remove('active');
+            document.body.style.overflow = '';
+        });
+
+        // Close menu when clicking outside
+        document.addEventListener('click', (e) => {
+            if (mobileMenu.classList.contains('active') && 
+                !mobileMenu.contains(e.target) && 
+                !menuButton.contains(e.target)) {
+                mobileMenu.classList.remove('active');
+                document.body.style.overflow = '';
+            }
+        });
+
+        // Prevent clicks inside menu from closing it
+        mobileMenu.addEventListener('click', (e) => {
+            e.stopPropagation();
         });
 
         async function loadTutors() {
