--- a/index.html
+++ b/index.html
@@ -775,7 +775,8 @@
             <div class="nav-links">
                 <a href="home.html" class="nav-link">HOME</a>
                 <a href="tutors.html" class="nav-link">FIND TUTORS</a>
-                <a href="#" class="nav-link">BECOME A TUTOR</a>
+                <a href="registertutor.html" class="nav-link">BECOME A TUTOR</a>
+                <a href="my-courses.html" class="nav-link">MY COURSES</a>
             </div>
             <div class="search-bar">
                 <input type="text" class="search-input" placeholder="Search...">
@@ -805,7 +806,8 @@
             <a href="home.html" class="nav-link">HOME</a>
             <a href="tutors.html" class="nav-link">FIND TUTORS</a>
             <a href="registertutor.html" class="nav-link">BECOME A TUTOR</a>
-        </div>
+            <a href="my-courses.html" class="nav-link">MY COURSES</a>
+        </div>>
         <div class="search-bar">
             <input type="text" class="search-input" placeholder="Search...">
         </div>
@@ -880,6 +882,7 @@
                         <li><a href="home.html">Home</a></li>
                         <li><a href="tutors.html">Find Tutors</a></li>
                         <li><a href="registertutor.html">Become a Tutor</a></li>
+                        <li><a href="my-courses.html">My Courses</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
