--- a/index.html
+++ b/index.html
@@ -773,9 +773,9 @@
                 <span>TutorConnect</span>
             </a>
             <div class="nav-links">
-                <a href="home.html" class="nav-link">HOME</a>
+                <a href="index.html" class="nav-link">HOME</a>
                 <a href="tutors.html" class="nav-link">FIND TUTORS</a>
-                <a href="registertutor.html" class="nav-link">BECOME A TUTOR</a>
+                <a href="#not updated" class="nav-link">BECOME A TUTOR</a>
                 <a href="my-courses.html" class="nav-link">MY COURSES</a>
             </div>
             <div class="search-bar">
