--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
             <a href="tutors.html" class="nav-link">FIND TUTORS</a>
             <a href="registertutor.html" class="nav-link">BECOME A TUTOR</a>
             <a href="my-courses.html" class="nav-link">MY COURSES</a>
-        </div>>
+        </div>
         <div class="search-bar">
             <input type="text" class="search-input" placeholder="Search...">
         </div>
